--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,8 +25,6 @@ IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
 ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Windows")
     LINK_DIRECTORIES(
             ${PROJECT_SOURCE_DIR}/lib/mingw
-            /usr/lib
-            /usr/local/lib
             ${CMAKE_DL_LIBS}
     )
     ADD_DEFINITIONS(-DSYS_WINDOWS)
@@ -47,5 +45,6 @@ ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})
 IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
     TARGET_LINK_LIBRARIES(${PROJECT_NAME} glfw3 X11 GL dl pthread)
 ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Windows")
-    TARGET_LINK_LIBRARIES(${PROJECT_NAME} glfw3  pthread)
+    TARGET_LINK_LIBRARIES(${PROJECT_NAME} glfw3)
+    set(CMAKE_EXE_LINKER_FLAGS "-static")
 ENDIF()
